--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "Exposures",
-  "version": "1.0.0",
-  "description": "Grabs exposures from Completed page and exports a CSV.",
+  "version": "1.1.0",
+  "description": "Grabs exposures from the Completed page and exports a CSV.",
   "permissions": ["scripting", "activeTab", "storage"],
   "host_permissions": [
     "https://www.underdogfantasy.com/*",
@@ -13,15 +13,5 @@
   },
   "action": {
     "default_title": "Exposures"
-  },
-  "content_scripts": [
-    {
-      "matches": [
-        "https://www.underdogfantasy.com/*",
-        "https://underdogfantasy.com/*"
-      ],
-      "js": ["content.js"],
-      "run_at": "document_idle"
-    }
-  ]
+  }
 }
